--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trumeneva",
-  "version": "1.0.4",
+  "version": "1.0",
   "description": "A Bootstrap 5.0.2 boilerplate with sass and gulp 4",
   "main": "index.js",
   "scripts": {
@@ -30,8 +30,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.2",
-    "push-dir": "^0.4.1"
+    "bootstrap-icons": "^1.10.2"
   },
   "devDependencies": {
     "browser-sync": "^2.27.10",
@@ -46,6 +45,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "merge-stream": "^1.0.1",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "push-dir": "^0.4.1"
   }
 }
